--- a/ansible/roles/syncronize/defaults/main.yml
+++ b/ansible/roles/syncronize/defaults/main.yml
@@ -1,1 +1,12 @@
 Tools_path: '/buildspace/buildTools/'
+
+ToolsList:
+
+  - Midnight commander :
+    name: mc
+
+  - VIM Tools :
+    name: vim
+
+
+
