--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -14,7 +14,7 @@
     mode: 0440
   with_items:  "{{ ToolsList }}"
 
-- name: Unarchive a file that is already on the remote machine
+- name: ===================== UNARCHIVE BUILD TOOLS =====================
   unarchive:
     src: "/tmp/{{item.name}}"
     dest: '{{Tools_path}}'
