--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -1,3 +1,7 @@
 - name: ===================== FIND FOLDERS =====================
   find:
-    paths: '{{Tools_path}}'
+    path: '{{Tools_path}}'
+    register: files
+
+- name: ===================== SHOW FOLDERS =====================
+  debug: msg="{{ files.files | sort(attribute='ctime') | map(attribute='path') | list }}"
