--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: ===================== FIND FOLDERS =====================
   find:
-    path: '{{Tools_path}}'
+    paths: '{{Tools_path}}'
     register: files
 
 - name: ===================== SHOW FOLDERS =====================
