--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -4,4 +4,4 @@
   register: files
 
 - name: ===================== SHOW FOLDERS =====================
-  debug: msg="{{ files.files | sort(attribute='ctime') | map(attribute='path') | list }}"
+  debug: msg="{{ files.files | sort(attribute='ctime') |  list }}"
