--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: ===================== FIND FOLDERS =====================
   find:
     paths: '{{Tools_path}}'
-  register: folders
+#  register: folders
 
-- name: ===================== SHOW FOLDERS =====================
-  debug: msg="{{ folders.folders | sort(attribute='ctime') |  list }}"
+#- name: ===================== SHOW FOLDERS =====================
+#  debug: msg="{{ folders.folders | sort(attribute='ctime') |  list }}"
