--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -1,8 +1,9 @@
 - name: ===================== FIND FOLDERS =====================
   find:
     paths: '{{Tools_path}}'
-    patterns: *
-#  register: folders
+    patterns: '*'
+    file_type: directory
+  register: file
 
-#- name: ===================== SHOW FOLDERS =====================
-#  debug: msg="{{ folders.folders | sort(attribute='ctime') |  list }}"
+- name: ===================== SHOW FOLDERS =====================
+  debug: msg="{{ file.file | sort(attribute='ctime') |  list }}"
