--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -3,8 +3,8 @@
     paths: '{{Tools_path}}'
     patterns: '*'
     file_type: directory
-  register: file
+  register: folder
 
 - name: ===================== SHOW FOLDERS =====================
   #debug: msg="{{ file.file | sort(attribute='ctime') |  list }}"
-  debug: msg="{{ file}}"
+  debug: msg="{{ folder.path }}"
