--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -7,4 +7,4 @@
 
 - name: ===================== SHOW FOLDERS =====================
   #debug: msg="{{ file.file | sort(attribute='ctime') |  list }}"
-  debug: msg="{{ folder }}"
+  debug: msg="{{ folder }} | map(attribute='path') | list"
