--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -8,3 +8,6 @@
 - name: ===================== SHOW FOLDERS =====================
   #debug: msg="{{ file.file | sort(attribute='ctime') |  list }}"
   debug: msg="{{ folder | json_query('files."path"') }}"
+
+- name: ===================== BASH ===================== 
+  shell: echo {{ folder }}
