--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -10,4 +10,4 @@
   debug: msg="{{ folder.files | json_query('files."path"') }}"
 
 - name: ===================== BASH ===================== 
-  shell: echo {{ folder }}
+  shell: echo {{ folder.files }}
