--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -15,6 +15,6 @@
 
 - name: ===================== DEBUG =====================
   debug: var=item
-  with_items: "{{folder.files|json_query(files)}}"
+  with_items: "{{folder|json_query(files)}}"
   vars:
     server_name_cluster1_query: "path"
