--- a/ansible/roles/get_sw/tasks/main.yml
+++ b/ansible/roles/get_sw/tasks/main.yml
@@ -15,4 +15,4 @@
 
 - name: ===================== DEBUG =====================
   debug: var=item
-  with_items: "{{folder|json_query('files.path')}}"  
+  with_items: "{{folder|json_query('files')}}"  
