--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -23,7 +23,7 @@
 #  become: yes
 
 - name: ===================== Check files  =====================
-  shell: echo "{{item}}"
+  shell: "echo {{ item.name }}"
   with_items:  "{{ ToolsList }}"
 
 
