--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -23,7 +23,7 @@
 #  become: yes
 
 - name: ===================== Check files  =====================
-  shell: echo "SW -  {{ item.name }}"
+  shell: echo "SW  {{ item.name }}"
   with_items:  "{{ ToolsList }}"
 
 
