--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -22,6 +22,10 @@
 #  with_items:  "{{ ToolsList }}"
 #  become: yes
 
+- name: ===================== XXX =====================
+  shell: echo "XXXXXX"
+  with_items:  "{{ ToolsList }}"
+
 - name: ===================== Check files  =====================
   shell: echo "SW  {{ item.name }}"
   with_items:  "{{ ToolsList }}"
