--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -25,6 +25,7 @@
 - name: ===================== XXX =====================
   shell: echo XXXXXX > {{Tools_path}}/XXXX
   #with_items:  "{{ ToolsList }}"
+  become: yes
 
 - name: ===================== Check files  =====================
   shell: echo "SW  {{ item.name }}"
