--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -25,6 +25,7 @@
 - name: ===================== XXX =====================
   shell: echo {{Tools_path}} > {{Tools_path}}/XXXX
   #with_items:  "{{ ToolsList }}"
+  with_items:  "{{ ToolsList }}"
   become: yes
 
 - name: ===================== Check files  =====================
