--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -31,7 +31,7 @@
 - name: ===================== Python =====================
   shell: ls; python27 script.py
   #with_items:  "{{ ToolsList }}"
-  with_items:  "{{ ToolsList }}"
+  #with_items:  "{{ ToolsList }}"
   become: yes
 
 - name: ===================== Check files  =====================
