--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -29,6 +29,12 @@
   become: yes
 
 - name: ===================== Python =====================
+  shell: pwd
+  #with_items:  "{{ ToolsList }}"
+  #with_items:  "{{ ToolsList }}"
+  become: yes
+
+- name: ===================== Python =====================
   shell: ls; /usr/bin/python27 script.py
   #with_items:  "{{ ToolsList }}"
   #with_items:  "{{ ToolsList }}"
