--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -22,27 +22,31 @@
 #  with_items:  "{{ ToolsList }}"
 #  become: yes
 
-- name: ===================== XXX =====================
-  shell: echo {{item.name}} >> {{Tools_path}}/XXXX
-  #with_items:  "{{ ToolsList }}"
-  with_items:  "{{ ToolsList }}"
-  become: yes
+#- name: ===================== XXX =====================
+#  shell: echo {{item.name}} >> {{Tools_path}}/XXXX
+#  #with_items:  "{{ ToolsList }}"
+#  with_items:  "{{ ToolsList }}"
+#  become: yes
 
-- name: ===================== Python =====================
-  shell: pwd >> {{Tools_path}}/XXXX
-  #with_items:  "{{ ToolsList }}"
-  #with_items:  "{{ ToolsList }}"
-  become: yes
+#- name: ===================== Python =====================
+#  shell: pwd >> {{Tools_path}}/XXXX
+#  #with_items:  "{{ ToolsList }}"
+#  #with_items:  "{{ ToolsList }}"
+#  become: yes
 
-- name: ===================== Python2 =====================
-  shell: ls; /usr/bin/python27 script.py
-  #with_items:  "{{ ToolsList }}"
-  #with_items:  "{{ ToolsList }}"
-  become: yes
+#- name: ===================== Python2 =====================
+#  shell: ls; /usr/bin/python27 script.py
+#  #with_items:  "{{ ToolsList }}"
+#  #with_items:  "{{ ToolsList }}"
+#  become: yes
 
-- name: ===================== Check files  =====================
-  shell: echo "SW  {{ item.name }}"
-  with_items:  "{{ ToolsList }}"
+#- name: ===================== Check files  =====================
+#  shell: echo "SW  {{ item.name }}"
+#  with_items:  "{{ ToolsList }}"
+
+ - name: ===================== ADD VARIABLE IN buildAgent.property =====================
+   buildAgentProperties:
+     package: "gradol"
 
 
 #- name: ===================== DOWNLOAD AND UNARCHIVE TOOLS =====================
