--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -14,6 +14,16 @@
     mode: 0440
   with_items:  "{{ ToolsList }}"
 
+
+- name: ++++ GET DIRECTORIES ++++
+  find:
+    paths: "{{ ToolsList }}"
+    file_type: directory
+  register: folder_list
+
+- name: = OUT =
+  debug: var=folder_list
+
 - name: ===================== ADD VARIABLE IN buildAgent.property =====================
   buildAgentProperties:
     package: "{{item.name}}"
