--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: ++++ GET DIRECTORIES ++++
   find:
-    paths: "{{ ToolsList }}"
+    paths: '{{Tools_path}}'
     file_type: directory
   register: folder_list
 
