--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -25,7 +25,7 @@
   debug: var=folder_list
 
 - name: = == LOOP== =
-  debug: var="{{ folder_list.path }}"
+  debug: var="{{ folder_list.files }}"
   with_items:  "{{ folder_list }}"
 
 - name: ===================== ADD VARIABLE IN buildAgent.property =====================
