--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -21,8 +21,8 @@
     file_type: directory
   register: folder_list
 
-- name: = == OUT == =
-  debug: var=folder_list.files[1].path
+#- name: = == OUT == =
+#  debug: var=folder_list.files[1].path
 
 - name: = == LOOP== =
   debug: var="{{ folder_list }}"
