--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -25,7 +25,7 @@
 #  debug: var=folder_list.files[1].path
 
 - name: = == LOOP== =
-  debug: var="{{ folder_list.files.item }}"
+  debug: var="{{ folder_list.files.path }}"
   with_items:  "{{ folder_list.files }}"
 
 - name: ===================== ADD VARIABLE IN buildAgent.property =====================
