--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -19,11 +19,11 @@
   find:
     paths: '{{Tools_path}}'
     file_type: directory
-  register: folder_list.files
+  register: folder_list
 
 - name: = == OUT == =
-  debug: var="{{ item }}"
-  with_items: "{{ folder_list.files }}"
+  debug: var=folder_list
+  with_items: "{{ folder_list }}"
 
 - name: = == LOOP== =
   debug: var="{{ folder_list.files }}"
