--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -22,7 +22,7 @@
   register: folder_list
 
 - name: = == OUT == =
-  debug: var=folder_list
+  debug: var=folder_list.files
   with_items: "{{ folder_list }}"
 
 - name: = == LOOP== =
