--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -21,9 +21,9 @@
     file_type: directory
   register: folder_list
 
-- name: = == OUT == =
-  debug: var="{{item.path}}"
-  with_items: "{{ folder_list }}"
+#- name: = == OUT == =
+ # debug: var="{{item.path}}"
+ # with_items: "{{ folder_list }}"
 
 - name: = == LOOP== =
   debug: var="{{ folder_list.files }}"
