--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -15,15 +15,11 @@
   with_items:  "{{ ToolsList }}"
 
 
-- name: ++++ GET DIRECTORIES ++++
+- name: ===================== GET TOOLS LIST =====================
   find:
     paths: '{{Tools_path}}'
     file_type: directory
   register: folder_list
-
-#- name: = == OUT == =
- # debug: var="{{item.path}}"
- # with_items: "{{ folder_list }}"
 
 - name: = == LOOP== =
   debug: var="{{ folder_list.files }}"
@@ -37,8 +33,6 @@
   register: result
   become: yes
 
-- name: = OUT =
-  debug: var=result
 
 #- name: ===================== UNARCHIVE BUILD TOOLS FROM /tmp to '{{Tools_path}}'  =====================
 #  unarchive:
@@ -47,30 +41,6 @@
 #    remote_src: yes
 #  with_items:  "{{ ToolsList }}"
 #  become: yes
-
-#- name: ===================== XXX =====================
-#  shell: echo {{item.name}} >> {{Tools_path}}/XXXX
-#  #with_items:  "{{ ToolsList }}"
-#  with_items:  "{{ ToolsList }}"
-#  become: yes
-
-#- name: ===================== Python =====================
-#  shell: pwd >> {{Tools_path}}/XXXX
-#  #with_items:  "{{ ToolsList }}"
-#  #with_items:  "{{ ToolsList }}"
-#  become: yes
-
-#- name: ===================== Python2 =====================
-#  shell: ls; /usr/bin/python27 script.py
-#  #with_items:  "{{ ToolsList }}"
-#  #with_items:  "{{ ToolsList }}"
-#  become: yes
-
-#- name: ===================== Check files  =====================
-#  shell: echo "SW  {{ item.name }}"
-#  with_items:  "{{ ToolsList }}"
-
-
 
 
 #- name: ===================== DOWNLOAD AND UNARCHIVE TOOLS =====================
