--- a/ansible/roles/syncronize/tasks/main.yml
+++ b/ansible/roles/syncronize/tasks/main.yml
@@ -31,6 +31,7 @@
     property_file: "{{ property_file }}"
   with_items:  "{{ folder_list.files }}"
   #register: result
+  no_log: True
   become: yes
 
 
