--- a/manage_agent.yml
+++ b/manage_agent.yml
@@ -7,3 +7,10 @@
   
   tasks:
   - shell: echo '{{param}}'
+  
+  - name: ==================== TC agent start =================
+  service:
+    name: 'teamcity-agent'
+    pattern: /etc/init.d
+    state: started
+  become: yes
