--- a/manage_agent.yml
+++ b/manage_agent.yml
@@ -13,5 +13,5 @@
     service:
       name: 'teamcity-agent'
       pattern: /etc/init.d
-      state: started
+      state: '{{param}}'
     become: yes
