--- a/manage_agent.yml
+++ b/manage_agent.yml
@@ -16,6 +16,6 @@
       #state: '{{param}}'
       state: stopped
       enabled: no
-    register: command_result
+    register: unused_disable
     failed_when: "unused_disable|failed and ('find' not in unused_disable.msg and 'found' not in unused_disable.msg)"
     become: yes
