--- a/manage_agent.yml
+++ b/manage_agent.yml
@@ -11,11 +11,11 @@
   
   - name: ==================== TC agent '{{param}}' =================
     service:
-      name: 'teamcity-agent'
+      name: iptables
       pattern: /etc/init.d
       #state: '{{param}}'
       state: stopped
-      enabled: no
-    register: unused_disable
-    failed_when: "unused_disable|failed and ('find' not in unused_disable.msg and 'found' not in unused_disable.msg)"
+      #enabled: no
+    #register: unused_disable
+    #failed_when: "unused_disable|failed and ('find' not in unused_disable.msg and 'found' not in unused_disable.msg)"
     become: yes
