--- a/manage_agent.yml
+++ b/manage_agent.yml
@@ -12,7 +12,7 @@
   
   - name: ==================== TC agent '{{param}}' =================
     service:
-      name: httpd
+      name: teamcity-agent
       #pattern:  /buildspace/buildAgent/logs/buildAgent
       state: '{{param}}'
       #state: stopped
